--- a/css/index.css
+++ b/css/index.css
@@ -138,18 +138,72 @@ header {
   margin: 16% auto 5% auto;
 }
 
-#welcome_title {
-  position: relative;
-  text-align: center;
-  font-size: 60px;
-  margin: 0px 1rem 0px 1rem;
+/* Glitched Title (Mehmet Yavuz Zenginerler) */
+.gliched_container {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  margin: auto;
 }
+
+.glich_stack {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.glich_stack span {
+  font-weight: bold;
+  grid-row-start: 1;
+  grid-column-start: 1;
+  font-size: 60px;
+  --stack-height: calc(100% / var(--stacks) - 1px);
+  --inverse-index: calc(calc(var(--stacks) - 1) - var(--index));
+  --clip-top: calc(var(--stack-height) * var(--index));
+  --clip-bottom: calc(var(--stack-height) * var(--inverse-index));
+  clip-path: inset(var(--clip-top) 0 var(--clip-bottom) 0);
+  animation: stack 340ms cubic-bezier(.46,.29,0,1.24) 1 backwards calc(var(--index) * 120ms), glitch 2s ease infinite 2s alternate-reverse;
+}
+
+.glich_stack span:nth-child(odd) { --glitch-translate: 8px; }
+.glich_stack span:nth-child(even) { --glitch-translate: -8px; }
+
+@keyframes stack {
+  0% {
+    opacity: 0;
+    transform: translateX(-50%);
+    text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
+  };
+  60% {
+    opacity: 0.5;
+    transform: translateX(50%);
+  }
+  80% {
+    transform: none;
+    opacity: 1;
+    text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
+  }
+  100% {
+    text-shadow: none;
+  }
+}
+
+@keyframes glitch {
+  0% {
+    text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
+    transform: translate(var(--glitch-translate));
+  }
+  2% {
+    text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
+  }
+  4%, 100% {  text-shadow: none; transform: none; }
+}
+
 
 #welcome_message {
   position: relative;
   text-align: center;
   font-size: 22px;
-  margin: 2em 4em 2px 4em;
+  margin: 1.75em 4em 2px 4em;
 }
 
 .socials-list {
@@ -210,6 +264,7 @@ header {
 .social-item:nth-child(3) a:hover:before {
   background: var(--blueLinkedin);
 }
+
 
 /* About-Me Section
 ------------------------------------------------------------------------------- */
